--- a/index.htm
+++ b/index.htm
@@ -6,8 +6,8 @@
 	<meta name="description" content="Ease of Working Using GIS">
 	<meta name="author" content="Saikprajwal">
 	<title>Ease of Working Using GIS</title>
-	<link rel="stylesheet" href="Ease%20of%20Working%20Using%20GIS_files/reveal.css">
-	<link rel="stylesheet" href="Ease%20of%20Working%20Using%20GIS_files/default.css" id="theme">
+	<link rel="stylesheet" href="./reveal.css">
+	<link rel="stylesheet" href="./default.css" id="theme">
 </head>
 
 <body>
@@ -98,8 +98,8 @@
 				</div>
 			</div>
 	<div style="display: block;" class="progress"><span style="width: 0px;"></span></div><aside style="display: block;" class="controls"><div class="navigate-left"></div><div class="navigate-right enabled"></div><div class="navigate-up"></div><div class="navigate-down"></div></aside><div class="state-background"></div><div class="pause-overlay"></div></div>
-	<script src="Ease%20of%20Working%20Using%20GIS_files/head.js"></script>
-	<script type="text/javascript" src="Ease%20of%20Working%20Using%20GIS_files/reveal.js"></script>
+	<script src="./head.js"></script>
+	<script type="text/javascript" src="./reveal.js"></script>
 	
 	<script>
 		// Required, even if empty.
