--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 	</section>
 
 <section data-background-transition="slide" data-background="#603cba">
+	<section>
 	<p>FOR ATTRIBUTE DATA in NOC/NA</p>
 	<p class="fragment">SET A STANDARD LIKE</p>
 	<blockquote>
@@ -126,8 +127,15 @@
 	</ul>
 	</blockquote>
 	</section>
+	<section>
+	<h2>For NOC</h2>
+	<p>Here's an example:</p>
+	<iframe src="https://www.google.com/maps/d/embed?mid=1xTNxCZCeCnvzKqo_gvPvyxhovPTCiVZt" width="640" height="480"></iframe>
+	</section>
+	</section>
 
 <section data-background-transition="zoom" data-background="#603cba">
+	<section>
 	<p>FOR ATTRIBUTE DATA in LAYOUT(SITE, PARK, CA)</p>
 	<p class="fragment">SET A STANDARD LIKE</p>
 	<blockquote>
@@ -139,6 +147,12 @@
 	</ul>
 	</blockquote>
 	</section>
+	<section>
+	<h2>For Layout</h2>
+	<p>Here's an example:</p>
+	<iframe src="https://www.google.com/maps/d/embed?mid=1xTNxCZCeCnvzKqo_gvPvyxhovPTCiVZt" width="640" height="480"></iframe>
+	</section>
+	</section>
 
 <section data-background-transition="slide" data-background="#603cba">
 	<ul>
@@ -148,7 +162,8 @@
 	<li class="fragment">While giving TECHNICAL OPINION for BUILDING LICENSE for requested SITE can be EASILY VERIFIED.</li>
 	<li class="fragment">Whenever LPA is notified for certain places Existing Development will be readily available.</li>
 	</ul>
-	</section>
+	</section>
+
 	</div>
 </div>
 
