--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 	<section>
 	<h2>For NOC</h2>
 	<p>Here's an example:</p>
-	<iframe src="https://www.google.com/maps/d/embed?mid=1xTNxCZCeCnvzKqo_gvPvyxhovPTCiVZt" width="640" height="480"></iframe>
+	<iframe src="https://townplannerin.github.io/imap/#16/14.0438/76.1857" width="640" height="480"></iframe>
 	</section>
 	</section>
 
@@ -150,7 +150,7 @@
 	<section>
 	<h2>For Layout</h2>
 	<p>Here's an example:</p>
-	<iframe src="https://www.google.com/maps/d/embed?mid=1xTNxCZCeCnvzKqo_gvPvyxhovPTCiVZt" width="640" height="480"></iframe>
+	<iframe src="https://townplannerin.github.io/imap/#16/14.0438/76.1857" width="640" height="480"></iframe>
 	</section>
 	</section>
 
