--- a/index.html
+++ b/index.html
@@ -118,12 +118,11 @@
 	<li>3rd  row is TALUK</li>
 	<li>4th  row is HOBLI</li>
 	<li>5th  row is GRAMA</li>
-	<li>6th  row is R.SY.No(first part)</li>
-	<li>7th  row is R.SY.No(second part)</li>
-	<li>8th  row is Extent(Acre-Gunta.00)</li>
-	<li>9th  row is NOC Purpose</li>
-	<li>10th  row is NOC given date</li>
-	<li>11th  row is Land Conversion Date.</li>
+	<li>6th  row is R.SY.No</li>
+	<li>7th  row is Extent(Acre-Gunta.00)</li>
+	<li>8th  row is NOC Purpose</li>
+	<li>9th  row is NOC given date</li>
+	<li>10th  row is Land Conversion Date.</li>
 	</ul>
 	</blockquote>
 	</section>
@@ -140,10 +139,10 @@
 	<p class="fragment">SET A STANDARD LIKE</p>
 	<blockquote>
 	<ul class="fragment">
-	<li>Copy same up to the 11th  row in NOC/NA Then,</li>
-	<li>12th  row is LAYOUT APPROVED DATE (100% RELEASED)</li>
-	<li>13th  row is SITE No. or PARK or CA</li>
-	<li>14th  row is SITE or PARK or CA DIMENSION</li>
+	<li>Copy same up to the 10th  row in NOC/NA Then,</li>
+	<li>11th  row is LAYOUT APPROVED DATE (100% RELEASED)</li>
+	<li>12th  row is SITE No. or PARK or CA</li>
+	<li>13th  row is SITE or PARK or CA DIMENSION</li>
 	</ul>
 	</blockquote>
 	</section>
