--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <div class="slides">
 
 <section>
+	<section>
 	<h3>Ease of Working Using GIS</h3>
 	<p><a href="https://twitter.com/saikprajwal">Saikprajwal</a></p>
 	<ul>
@@ -75,6 +76,12 @@
  	<li class="fragment">Then check it on GOOGLE EARTH for its accuracy(if need correct it).</li>
 	<li class="fragment">Make sure you map GRAMATANA correctly.</li>
 	</ul> 
+	</section>
+	<section>
+	<h2>For NOC</h2>
+	<p>Here's an example:</p>
+	<iframe src="https://www.google.com/maps/d/embed?mid=1gxgw1LOBvG1yB0zAw_0vLoD4-HNYHw3r" width="640" height="480"></iframe>
+	</section>
 	</section>
 
 <section data-background-transition="zoom" data-background="#2d89ef">
@@ -129,7 +136,7 @@
 	<section>
 	<h2>For NOC</h2>
 	<p>Here's an example:</p>
-	<iframe src="https://townplannerin.github.io/imap/#16/14.0438/76.1857" width="640" height="480"></iframe>
+	<iframe src="https://www.google.com/maps/d/embed?mid=1gxgw1LOBvG1yB0zAw_0vLoD4-HNYHw3r" width="640" height="480"></iframe>
 	</section>
 	</section>
 
