--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	</ul> 
 	</section>
 	<section>
-	<h2>For NOC</h2>
+	<h2>For GRAMATANA</h2>
 	<p>Here's an example:</p>
 	<iframe src="https://www.google.com/maps/d/embed?mid=1gxgw1LOBvG1yB0zAw_0vLoD4-HNYHw3r" width="640" height="480"></iframe>
 	</section>
@@ -156,7 +156,7 @@
 	<section>
 	<h2>For Layout</h2>
 	<p>Here's an example:</p>
-	<iframe src="https://townplannerin.github.io/imap/#16/14.0438/76.1857" width="640" height="480"></iframe>
+	<iframe src="https://www.google.com/maps/d/embed?mid=1gxgw1LOBvG1yB0zAw_0vLoD4-HNYHw3r" width="640" height="480"></iframe>
 	</section>
 	</section>
 
