--- a/e1.html
+++ b/e1.html
@@ -5,7 +5,7 @@
 	<title>
 		Preview
 	</title>
-	<link rel="stylesheet" href="Preview_files/leaflet.css">
+	<link rel="stylesheet" href="e1/leaflet.css">
 	<!--[if lte IE 8]>
 			<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.ie.css" />
 		<![endif]-->
@@ -26,16 +26,16 @@
 	</style>
 </head>
 	<div id="map"></div>
-	<script src="Preview_files/leaflet.js"></script>
-	<script src="Preview_files/catiline.js"></script>
-	<script src="Preview_files/leaflet.shpfile.js"></script>
+	<script src="e1/leaflet.js"></script>
+	<script src="e1/catiline.js"></script>
+	<script src="e1/leaflet.shpfile.js"></script>
 	<script>
 		var m = L.map('map').setView([42.09618442380296, -71.5045166015625], 8);
 		var watercolor = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 			attribution: '<a href="https://twitter.com/Saikprajwal" title="A Map by Saikprajwal">Saikprajwal</a>'
 		}).addTo(m);
 
-		var shpfile = new L.Shapefile('congress.zip', {
+		var shpfile = new L.Shapefile('e1/congress.zip', {
 			onEachFeature: function(feature, layer) {
 				if (feature.properties) {
 					layer.bindPopup(Object.keys(feature.properties).map(function(k) {
@@ -51,7 +51,5 @@
 			console.log("finished loaded shapefile");
 		});
 	</script>
-
-
-
-</body></html>
+</body>
+</html>
