--- a/e1.html
+++ b/e1.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
-<html style="" lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head>
 	<meta charset="utf-8">
 	<title>
 		Preview
