--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
 	</section>
 	<section>
 	<h2>For GRAMATANA</h2>
-	<p>Here's an example:</p>
-	<iframe src="https://www.google.com/maps/d/embed?mid=1gxgw1LOBvG1yB0zAw_0vLoD4-HNYHw3r" width="640" height="480"></iframe>
+	<p>Here's an example:▼▼▼</p>
+	</section>
+	<section data-background-iframe="https://townplannerin.github.io/imap/" data-background-interactive>
 	</section>
 	</section>
 
@@ -135,8 +136,9 @@
 	</section>
 	<section>
 	<h2>For NOC</h2>
-	<p>Here's an example:</p>
-	<iframe src="https://www.google.com/maps/d/embed?mid=1gxgw1LOBvG1yB0zAw_0vLoD4-HNYHw3r" width="640" height="480"></iframe>
+	<p>Here's an example:▼▼▼</p>
+	</section>
+	<section data-background-iframe="https://townplannerin.github.io/map/noc.html#18/14.47008/76.55073" data-background-interactive>
 	</section>
 	</section>
 
@@ -155,8 +157,9 @@
 	</section>
 	<section>
 	<h2>For Layout</h2>
-	<p>Here's an example:</p>
-	<iframe src="https://www.google.com/maps/d/embed?mid=1gxgw1LOBvG1yB0zAw_0vLoD4-HNYHw3r" width="640" height="480"></iframe>
+	<p>Here's an example:▼▼▼</p>
+	</section>
+	<section data-background-iframe="https://townplannerin.github.io/map/la.html#19/14.32349/76.66773" data-background-interactive>
 	</section>
 	</section>
 
