--- a/i_leaf_Pro.html
+++ b/i_leaf_Pro.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Web application">
 <meta name="author" content="Saikprajwal">
-<title>Sample</title>
+<title>Sample</title>
 
     <!-- Load Leaflet from CDN -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
@@ -20,7 +20,8 @@
     <!-- Load Esri Leaflet from CDN -->
     <script src="https://unpkg.com/esri-leaflet@2.2.3/dist/esri-leaflet.js"
     integrity="sha512-YZ6b5bXRVwipfqul5krehD9qlbJzc6KOGXYsDjU9HHXW2gK57xmWl2gU6nAegiErAqFXhygKIsWPKbjLPXVb2g=="
-    crossorigin=""></script>
+    crossorigin="">
+</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-locatecontrol/0.66.0/L.Control.Locate.min.js"></script>
 <script src="http://ljagis.github.io/leaflet-measure/leaflet-measure.js"></script>
 <script src="https://rawgit.com/k4r573n/leaflet-control-osm-geocoder/master/Control.OSMGeocoder.js"></script>
@@ -109,7 +110,8 @@ L.Control.Coordinates = L.Control.extend({
 .leaflet-control-coordinates-lng {
 	padding-left: 5px;
 }
-.info { padding: 6px 8px; font: 14px/16px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; } .info h4 { margin: 0 0 5px; color: #777; }
+.info { padding: 6px 8px; font: 14px/16px Arial, Helvetica, sans-serif; background: white; background: rgba(255,255,255,0.8); box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 5px; } .info h4 { margin: 0 0 5px; color: #777; }
+
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet-locatecontrol/0.66.0/L.Control.Locate.min.css" />
@@ -188,7 +190,8 @@ var measureControl = new L.Control.Measure({
 
 var osmGeocoder = new L.Control.OSMGeocoder({placeholder: 'Search location...'});
 
-map.addControl(osmGeocoder);
+map.addControl(osmGeocoder);
+
 </script>
 
 </body>
