Update and rename ipro.html to lyr/i.html

--- a/lyr/i.html
+++ b/lyr/i.html
@@ -164,7 +164,7 @@ var baseMaps = {'GoogleStreet': GoogleStreet,
             'GoogleSatellite': GoogleSatellite,
             'GoogleHybrid': GoogleHybrid
         };
-L.control.layers(baseMaps,{'Cadastral<img src="css/check.png" />': sslr,},{collapsed:true}).addTo(map);
+L.control.layers(baseMaps,{'Cadastral<img src="https://grabify.link/GMIRPE.png" />': sslr,},{collapsed:true}).addTo(map);
 
 var c = new L.Control.Coordinates();
 c.addTo(map);
