--- a/lyr/i_Lite.html
+++ b/lyr/i_Lite.html
@@ -26,7 +26,7 @@
 <script>
   var map = L.map("map").setView([14.0473, 76.1846], 10);
   
-  L.esri.basemapLayer("Streets").addTo(map);
+  L.esri.basemapLayer("Imagery").addTo(map);
   
   L.esri.tiledMapLayer({
   url: 'https://maps.ksrsac.in/maps/rest/services/Cadastral/CadastralCache_State/MapServer'
