--- a/i.html
+++ b/i.html
@@ -32,22 +32,13 @@ var map = L.map("map").setView([14.4643, 76.5472], 16);
 var scale = L.control.scale();
          scale.addTo(map);
 
-	var GoogleStreet =
-          L.tileLayer('http://www.google.com/maps/vt?lyrs=m@189&gl=com&x={x}&y={y}&z={z}', {
-            attribution: 'Map data &copy;2019 <a href="http://maps.google.com">Google</a> | Terms of Use',
-            maxZoom: 21
-          })
         var GoogleSatellite =
           L.tileLayer('http://www.google.com/maps/vt?lyrs=s@189&gl=com&x={x}&y={y}&z={z}', {
             attribution: 'Map data &copy;2019 <a href="http://maps.google.com">Google</a> | Terms of Use',
             maxZoom: 21
           })
-        var GoogleHybrid =
-          L.tileLayer('http://www.google.com/maps/vt?lyrs=s,h@189&gl=com&x={x}&y={y}&z={z}', {
-            attribution: 'Map data &copy;2019 <a href="http://maps.google.com">Google</a> | Terms of Use',
-            maxZoom: 21
-          })
-        map.addLayer(GoogleStreet);
+       
+        map.addLayer(GoogleSatellite);
 
  var mytile =L.tileLayer('https://imaping.000webhostapp.com/map/{z}/{x}/{y}.png', {
 	opacity: 0.30,
@@ -58,13 +49,9 @@ var scale = L.control.scale();
 
 map.attributionControl.setPrefix('');
 
-var baseMaps = {'GoogleStreet': GoogleStreet,
-            'GoogleSatellite': GoogleSatellite,
-            'GoogleHybrid': GoogleHybrid
+var baseMaps = {'GoogleSatellite': GoogleSatellite
         };
-        L.control.layers(baseMaps,{'Map': mytile,},{collapsed:true}).addTo(map);	
-
+L.control.layers(baseMaps,{'Map': mytile,},{collapsed:true}).addTo(map);
 </script>
-
 </body>
 </html>
