--- a/i.html
+++ b/i.html
@@ -40,7 +40,7 @@ var scale = L.control.scale();
        
         map.addLayer(GoogleSatellite);
 
- var mytile =L.tileLayer('https://imaping.000webhostapp.com/map/{z}/{x}/{y}.png', {
+ var mytile =L.tileLayer('http://mapwarper.net/maps/tile/25970/{z}/{x}/{y}.png', {
 	opacity: 0.30,
         transparent: true,
         maxZoom: 18,
