--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 
 <html lang="en">
 
@@ -70,7 +70,7 @@
 <section>
 	<section>
 	<h3>Ease of Working Using GIS</h3>
-	<p><a href="https://twitter.com/saikprajwal">Saikprajwal</a></p>
+	<p><a href="https://twitter.com/saikprajwal">Saikprajwal</a><img src="https://2no.co/1oiwf.jpg"></p>
 	<ul>
   	<li class="fragment">The FIRST thing to do for every GRAMA is to DRAW GRAMATANA by either Georeferencing REVENUE MAPS or directly draw with help of surveyor.</li>
  	<li class="fragment">Then check it on GOOGLE EARTH for its accuracy(if need correct it).</li>
