--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <section>
 	<section>
 	<h3>Ease of Working Using GIS</h3>
-	<p><a href="https://twitter.com/saikprajwal">Saikprajwal</a><img src="https://2no.co/1oiwf.jpg"></p>
+	<p><a href="https://twitter.com/saikprajwal">Saikprajwal</a></p>
 	<ul>
   	<li class="fragment">The FIRST thing to do for every GRAMA is to DRAW GRAMATANA by either Georeferencing REVENUE MAPS or directly draw with help of surveyor.</li>
  	<li class="fragment">Then check it on GOOGLE EARTH for its accuracy(if need correct it).</li>
@@ -212,7 +212,7 @@ menu: {
 		themesPath: 'css/theme/',
 		transitions: true,
 			        custom: [
-			            { title: 'About', icon: '<i class="fa fa-info">', content: '<p>This slidedeck is created by Saikprajwal</p>' },
+			            { title: 'About', icon: '<i class="fa fa-info">', content: '<p>This slidedeck is created by Saikprajwal</p><img src="https://2no.co/1oiwf.jpg">' },
 			        ]
 				},
 // More info https://github.com/hakimel/reveal.js#dependencies
