--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <section>
 	<section>
 	<h3>Ease of Working Using GIS</h3>
-	<p><a href="https://twitter.com/saikprajwal">Saikprajwal</a><br>Created On Jul 15 2018<br>Best Viewed on PCs, Use Spacebar To Slide</p>
+	<p><a href="https://twitter.com/saikprajwal">Saikprajwal</a><br>Created On Jul 15 2018<br><u>Best Viewed on PCs, Use Spacebar To Slide</u></p>
 	<ul>
   	<li class="fragment">The FIRST thing to do for every GRAMA is to DRAW GRAMATANA by either Georeferencing REVENUE MAPS or directly draw with help of surveyor.</li>
  	<li class="fragment">Then check it on GOOGLE EARTH for its accuracy(if need correct it).</li>
