--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta charset="utf-8">
 
 	
-<title>Ease of Working Using GIS</title>
-<meta name="description" content="Ease of Working Using GIS">
+<title>Planning With GIS</title>
+<meta name="description" content="Planning With GIS">
 <meta name="author" content="Saikprajwal">
 
 		
