--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 	<li class="fragment">.geojson or .kml is best.</li>
 	<li class="fragment">By this way DEVELOPMENTS around requested NA/LO will be known easily.</li>
 	<li class="fragment">While giving TECHNICAL OPINION for BUILDING LICENSE for requested SITE can be EASILY VERIFIED.</li>
-	<li class="fragment">Whenever LPA is notified for certain places Existing Development will be readily available.</li>
+	<li class="fragment">Whenever LPA is notified for certain places Existing Development will be readily available.☺</li>
 	</ul>
 	</section>
 
