--- a/noc.html
+++ b/noc.html
@@ -2,4 +2,4 @@
 <title>My Example</title>
 
 <h1>Welcome!</h1>
-<p>Map has been moved!</p><img src="https://2no.co/1YBXt7.jpg">
+<p>Map has been moved for private use.</p><img src="https://2no.co/1YBXt7.jpg">
