--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ menu: {
 		themesPath: 'css/theme/',
 		transitions: true,
 			        custom: [
-			            { title: 'About', icon: '<i class="fa fa-info">', content: '<p>This slidedeck is created by Saikprajwal</p><img src="https://2no.co/1oiwf.jpg">' },
+			            { title: 'About', icon: '<i class="fa fa-info">', content: '<p>This slidedeck is created by Saikprajwal</p>' },
 			        ]
 				},
 // More info https://github.com/hakimel/reveal.js#dependencies
