--- a/nyk.html
+++ b/nyk.html
@@ -40,7 +40,7 @@ var scale = L.control.scale();
        
         map.addLayer(GoogleSatellite);
 
- var mytile =L.tileLayer('https://imaping.000webhostapp.com/map/{z}/{x}/{y}.png', {
+ var mytile =L.tileLayer('https://townplannerin.github.io/map/data/BASE MAP Nayakanahatti/{z}/{x}/{y}.png', {
 	opacity: 0.30,
         transparent: true,
         maxZoom: 18,
